// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`BContainer Default to H2 if label is passed in with an invalid headerLevel property. Should log to console.error. 1`] = `
<section role="contentinfo" aria-label="hello world">
    <h2 class="header">hello world</h2>
    <div></div>
</section>
`;

exports[`BContainer Default to H2 if label is passed in without a headerLevel property. 1`] = `
<section role="contentinfo" aria-label="hello world">
    <h2 class="header">hello world</h2>
    <div></div>
</section>
`;

exports[`BContainer renders an element with no h element if hideLabel is passed 1`] = `
<section role="contentinfo" aria-label="hello world">
    <!---->
    <div></div>
</section>
`;

=======
>>>>>>> 25cf372404210ec3575ba29eafcbb58ab28b15ce
exports[`BContainer renders correctly 1`] = `
<section role="contentinfo" aria-label="hello world">
    <h1 class="header">hello world</h1>
    <div></div>
</section>
`;
<<<<<<< HEAD

exports[`BContainer renders props.label in header element when passed.  Can specify header level with prop 1`] = `
<section role="contentinfo" aria-label="hello world">
    <h6 class="header">hello world</h6>
    <div></div>
</section>
`;
=======
>>>>>>> 25cf372404210ec3575ba29eafcbb58ab28b15ce
